# project-atlas

./: .gitattributes  .gitignore  AI_IMPLEMENTATION_DETAILS.md  BUDGET_METHODOLOGY.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPY_INVENTORY.md  DELIVERABLES_CHECKLIST.md  DELIVERY_MANIFEST.md  DEV_REFERENCE_SAMPLE_BUDGET.md  EXECUTION_COMPLETE.md  FAISS_REBUILD_READY.md  FLAN_T5_INTEGRATION.md  GITHUB_POSTING_READY.md  GITHUB_PUSH_COMMANDS.md  GITHUB_READINESS_CHECKLIST.md  LICENSE  LICENSE_DECISION_ANALYSIS.md  ORGANIZATION_GUIDE.md  PROFILE_COMPLETION_MANUAL_TEST.md  README.md  REPO_STRUCTURE_PLAN.md  SAMPLE_BUDGET_AUTO_GENERATION.md  TESTING_README.txt  VA_OFFSET_FIX_COMPLETE.md  analyze.py  app.py  augment_kb_with_scenarios.py  check_profile_realism.py  conftest.py  diagnostic_ai_systems.py  milestone_c_baseline_report.json  pyproject.toml  quick_test_output.txt  requirements.txt
data/: milestone_e_faiss_index.pkl  milestone_e_index_metadata.json  milestone_e_kb_embeddings.npz  milestone_e_knowledge_base.json  milestone_e_production_config.json
docs/: ACADEMIC_FOUNDATION.md  ARCHITECTURE.md  FAIRNESS_AUDIT.md  MODEL_LIMITATIONS.md  VALIDATION_REFERENCES.md
documentation/: PHASE5_DATA_COLLECTION_PLAN.md
models/: comprehensive_answers_phase4_training.json  fine_tuning_dataset_final.json  training_data.json  validation_report.json
sample_budgets/: E8_Single_1Kid.csv  O4_Married_3Kids.csv  README.md
scenarios/: scenario_E-8_20260323_164429.json  scenario_O-1_20260323_164557.json  scenario_O-5_20260323_132129.json
src/: __init__.py  (+1 more)
(+110 files in other folders)
