[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-atlas"
version = "1.0.0"
description = "Military Financial Transition Planning Tool"

[tool.black]
line-length = 79
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 79

[tool.pylint]
max-line-length = 79

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
